# ProjectConfig

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SyCC.py
include/: PlatformDetection.h  ProjectAPI.h  ProjectPCH.hpp
include/ant/: Test.h
include/ant/core/: AntPCH.hpp  Core.h  PlatformDetection.h
include/project/: Test.h
include/project/core/: Core.h  PlatformDetection.h  ProjectPCH.hpp
lib/Debug-Windows-AMD64/: Ant.lib  Project.lib
src/ant/: CMakeLists.txt  Test.cpp
src/project/: CMakeLists.txt  Test.cpp
src/sandbox/: CMakeLists.txt  sandbox.cpp
vender/glad/src/: CMakeLists.txt
